syntax = "proto3";

option csharp_namespace = "SwipeVibesAPI.Grpc";

package users;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserReply);
  rpc UpdateUser (UpdateUserRequest) returns (UserReply);
  rpc DeleteUser (UserRequest) returns (DeleteReply);
  rpc GetUser (UserRequest) returns (UserReply);
  rpc GetUsers (Empty) returns (UsersReply);
  rpc Login (LoginRequest) returns (LoginReply);
}

message Empty {}

message UserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserReply {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}

message UsersReply {
  repeated UserReply users = 1;
}

message DeleteReply {
  bool success = 1;
}

message LoginReply {
  string token = 1;
  string username = 2;
  string role = 3;
}
